[package]
name = "git-heat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
git2 = "0.14.2"
itertools = "0.10.3"
rayon = "1.5.2"
snafu = "0.7.0"
time = { version = "0.3.9", features = ["parsing"] }
