[package]
name = "git-heat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
git2 = "0.14.2"
itertools = "0.10.3"
parking_lot = "0.12.0"
rayon = "1.5.2"
serde_json = "1.0.79"
snafu = "0.7.0"
time = { version = "0.3.9", features = ["parsing"] }
